# zevBot

./: .gitignore  .oxlintrc.json  Cargo.toml  Dockerfile  cli.go  cli.mts  main.go  messages.go  package.json  session.go  tsconfig.json  web.mts  ws.go
.devcontainer/: devcontainer.json
.github/workflows/: devcontainer.yml  release.yml
cli/: main.ts  web.ts
src/: cli.rs  main.rs  messages.rs  ws.rs
src/Utils/: bridge-store.mts
store/: clientpayload.go
