[package]
name = "zevBot"
version = "0.0.1"
edition = "2024"

[dependencies]
whatsapp-rust = "0.5"
whatsapp-rust-sqlite-storage = "0.5"
whatsapp-rust-tokio-transport = "0.5"
whatsapp-rust-ureq-http-client = "0.5"
wacore = "0.5"
waproto = "0.5"
tokio = { version = "1.48", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
serde_json = "1"
tokio-stream = "0.1"
