[package]
name = "zevBot"
version = "0.0.1"
edition = "2024"

[dependencies]
wacore = "0.6.0"
waproto = "0.6.0"
whatsapp-rust = "0.6.0"
whatsapp-rust-sqlite-storage = "0.6.0"
whatsapp-rust-tokio-transport = "0.6.0"
whatsapp-rust-ureq-http-client = "0.6.0"
tokio = { version = "1.48", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde_json = "1"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }